# ocr-soc

./: .gitignore  README.md  pyproject.toml  test_qr_result.json
.cursor/rules/: ocr.mdc  python.mdc
configs/layouts/: example_layout.json
ocr_system/: __init__.py
ocr_system/cli/: main.py  roi_editor.py
ocr_system/core/: __init__.py  anchor_detector.py  ocr_engine.py  preprocessing.py  processor.py  roi_extractor.py
ocr_system/models/: __init__.py  anchor.py  layout.py  result.py  roi.py
ocr_system/tools/: __init__.py  calculate_qr_ratios.py  roi_editor.py
ocr_system/utils/: exceptions.py  geometry.py  image_io.py  medical_rules.py  qr_cache.py  visualization.py
tests/: test_anchors.py  test_end_to_end.py  test_ocr_engine.py  test_preprocessing.py  test_qr_scaling.py  test_roi_extractor.py
